--- a/mischievous/230919-2023-workmap.md
+++ b/mischievous/230919-2023-workmap.md
@@ -27,6 +27,7 @@ mindmap
       Calmar Ratio
       SLSQP or Random Python Optimization 
       Markowitz Mean Variance Portfolio Theory
+      Passive Trading
     Math
       StateQuest
     Product
