--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -7,3 +7,8 @@ Grind 75
 2. using hashmap to cache the index of `complement`
    1. two loop
    2. one loop
+
+## Best Time to Buy and Sell Stock
+
+1. brute force
+2. one loop: if current price is lower than the previous one, we reset the buy point to the current one, because it's impossible to be the sell point for previous time series data.
