--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -12,3 +12,8 @@ Grind 75
 
 1. brute force
 2. one loop: if current price is lower than the previous one, we reset the buy point to the current one, because it's impossible to be the sell point for previous time series data.
+
+## Valid Parentheses
+
+1. use the stack data structure
+
