--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -13,6 +13,12 @@ Grind 75
    2. one loop
 
 ```java
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+
+import java.util.HashMap;
+import java.util.Map;
+
 /**
  * <a href="https://leetcode.com/problems/two-sum/">Two Sum</a> 
  */
@@ -74,6 +80,9 @@ class TwoSum {
 [1235. Maximum Profit in Job Scheduling](https://leetcode.com/problems/maximum-profit-in-job-scheduling/)
 
 ```java
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+
 /**
  * <a href="https://leetcode.com/problems/maximum-profit-in-job-scheduling/">Maximum Profit in Job Scheduling</a> 
  */
