--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -3,7 +3,7 @@ Grind 75
 
 [Grind 75 questions](https://www.techinterviewhandbook.org/grind75)
 
-## Two Sum
+## 1. Two Sum
 
 [1. Two Sum](https://leetcode.com/problems/two-sum/)
 
@@ -75,7 +75,7 @@ class TwoSum {
 
 ```
 
-## Maximum Profit in Job Scheduling
+## 1235. Maximum Profit in Job Scheduling
 
 [1235. Maximum Profit in Job Scheduling](https://leetcode.com/problems/maximum-profit-in-job-scheduling/)
 
@@ -116,5 +116,9 @@ class JobScheduling {
     }
 }
 ```
+
+## 70. Climbing Stairs
+
+[70. Climbing Stairs](https://leetcode.com/problems/climbing-stairs/)
 
 
