--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -121,4 +121,82 @@ class JobScheduling {
 
 [70. Climbing Stairs](https://leetcode.com/problems/climbing-stairs/)
 
+```java
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+
+/**
+ * <a href="https://leetcode.com/problems/climbing-stairs/">70. Climbing Stairs</a>
+ */
+class ClimbStairs {
+
+    /**
+     * f(n) = f(n-1) + f(n-2)
+     * f(1) = 1
+     * f(0) = 1
+     *
+     * @param n
+     * @return
+     */
+    public int climbStairs(final int n) {
+        if (n == 1 || n == 0) {
+            return 1;
+        }
+        return climbStairs(n - 1) + climbStairs(n - 2);
+    }
+
+    public int climbStairs2(final int n) {
+        return climbStairsBetter(n)[0];
+    }
+
+    /**
+     * remove the tail recursive
+     *
+     * @param n
+     * @return
+     */
+    public int[] climbStairsBetter(final int n) {
+        if (n <= 1) {
+            return new int[]{n, 1};
+        }
+        final int[] temp = climbStairsBetter(n - 1);
+        return new int[]{temp[0] + temp[1], temp[0]};
+    }
+
+    public int climbStairsDp(final int n) {
+        final int[] dp = new int[n + 1];
+        dp[0] = 1;
+        dp[1] = 1;
+        for (int i = 2; i <= n; i++) {
+            dp[i] = dp[i - 1] + dp[i - 2];
+        }
+        return dp[n];
+    }
+
+    @Test
+    void testTwoSumOne() {
+        final int n = 2;
+        final int output = 2;
+        Assertions.assertEquals(output, climbStairs(n));
+        Assertions.assertEquals(output, climbStairs2(n));
+        Assertions.assertEquals(output, climbStairsDp(n));
+    }
+
+    @Test
+    void testTwoSumTwo() {
+        final int n = 3;
+        final int output = 3;
+        Assertions.assertEquals(output, climbStairs(n));
+        Assertions.assertEquals(output, climbStairs2(n));
+        Assertions.assertEquals(output, climbStairsDp(n));
+    }
+
+    @Test
+    void testTwoSumThree() {
+        final int n = 10;
+        Assertions.assertEquals(climbStairs(n), climbStairsDp(n));
+    }
+}
+```
+
 
