--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -75,44 +75,44 @@ class TwoSum {
 
 ```
 
-## 1235. Maximum Profit in Job Scheduling
+## 55. Jump Game
 
-[1235. Maximum Profit in Job Scheduling](https://leetcode.com/problems/maximum-profit-in-job-scheduling/)
+[55. Jump Game](https://leetcode.com/problems/jump-game/)
 
 ```java
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 /**
- * <a href="https://leetcode.com/problems/maximum-profit-in-job-scheduling/">Maximum Profit in Job Scheduling</a> 
+ * <a href="https://leetcode.com/problems/jump-game/">55. Jump Game</a>
+ * <a href="https://mp.weixin.qq.com/s?__biz=Mzg4OTYzODM4Mw==&mid=2247485685&idx=1&sn=71d39243bccdb9023f7ce55f4948a66c&chksm=cfe99475f89e1d63e598bc3c15e44b23b2f24dffbced86fbfa404fba9ea340fc389bac179af4#rd">来见识一下贪心算法：Jump Game</a>
  */
-class JobScheduling {
-    public int jobScheduling(final int[] startTime, final int[] endTime, final int[] profit) {
-        return 0;
+class JumpGame {
+    public boolean canJump(final int[] nums) {
+        final int size = nums.length;
+        if (size == 0 || size == 1)
+            return true;
+        int step = nums[0];
+        for (final int num : nums) {
+            step = Math.max(step - 1, num);
+            if (step <= 0)
+                return false;
+        }
+        return true;
     }
 
     @Test
-    void testJobSchedulingOne() {
-        final int[] startTime = new int[]{1, 2, 3, 3};
-        final int[] endTime = new int[]{3, 4, 5, 6};
-        final int[] profit = new int[]{50, 10, 40, 70};
-        Assertions.assertEquals(120, jobScheduling(startTime, endTime, profit));
+    void testJumpGameOne() {
+        final int[] nums = new int[]{2, 3, 1, 1, 4};
+        final boolean output = true;
+        Assertions.assertEquals(output, canJump(nums));
     }
 
     @Test
-    void testJobSchedulingTwo() {
-        final int[] startTime = new int[]{1, 2, 3, 4, 6};
-        final int[] endTime = new int[]{3, 5, 10, 6, 9};
-        final int[] profit = new int[]{20, 20, 100, 70, 60};
-        Assertions.assertEquals(150, jobScheduling(startTime, endTime, profit));
-    }
-
-    @Test
-    void testJobSchedulingThree() {
-        final int[] startTime = new int[]{1, 1, 1};
-        final int[] endTime = new int[]{2, 3, 4};
-        final int[] profit = new int[]{5, 6, 4};
-        Assertions.assertEquals(6, jobScheduling(startTime, endTime, profit));
+    void testJumpGameTwo() {
+        final int[] nums = new int[]{3, 2, 1, 0, 4};
+        final boolean output = false;
+        Assertions.assertEquals(output, canJump(nums));
     }
 }
 ```
@@ -195,6 +195,48 @@ class ClimbStairs {
     void testTwoSumThree() {
         final int n = 10;
         Assertions.assertEquals(climbStairs(n), climbStairsDp(n));
+    }
+}
+```
+
+## 1235. Maximum Profit in Job Scheduling
+
+[1235. Maximum Profit in Job Scheduling](https://leetcode.com/problems/maximum-profit-in-job-scheduling/)
+
+```java
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+
+/**
+ * <a href="https://leetcode.com/problems/maximum-profit-in-job-scheduling/">Maximum Profit in Job Scheduling</a> 
+ */
+class JobScheduling {
+    public int jobScheduling(final int[] startTime, final int[] endTime, final int[] profit) {
+        return 0;
+    }
+
+    @Test
+    void testJobSchedulingOne() {
+        final int[] startTime = new int[]{1, 2, 3, 3};
+        final int[] endTime = new int[]{3, 4, 5, 6};
+        final int[] profit = new int[]{50, 10, 40, 70};
+        Assertions.assertEquals(120, jobScheduling(startTime, endTime, profit));
+    }
+
+    @Test
+    void testJobSchedulingTwo() {
+        final int[] startTime = new int[]{1, 2, 3, 4, 6};
+        final int[] endTime = new int[]{3, 5, 10, 6, 9};
+        final int[] profit = new int[]{20, 20, 100, 70, 60};
+        Assertions.assertEquals(150, jobScheduling(startTime, endTime, profit));
+    }
+
+    @Test
+    void testJobSchedulingThree() {
+        final int[] startTime = new int[]{1, 1, 1};
+        final int[] endTime = new int[]{2, 3, 4};
+        final int[] profit = new int[]{5, 6, 4};
+        Assertions.assertEquals(6, jobScheduling(startTime, endTime, profit));
     }
 }
 ```
