--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -20,15 +20,16 @@ import java.util.HashMap;
 import java.util.Map;
 
 /**
- * <a href="https://leetcode.com/problems/two-sum/">Two Sum</a> 
+ * <a href="https://leetcode.com/problems/two-sum/">Two Sum</a>
  */
 class TwoSum {
     private final Map<Integer, Integer> cache = new HashMap<>();
+
     public int[] twoSum(final int[] nums, final int target) {
         for (int i = 0; i < nums.length; i++) {
             final int residual = target - nums[i];
             if (cache.containsKey(residual)) {
-                return new int[] {cache.get(residual), i};
+                return new int[]{cache.get(residual), i};
             }
             cache.put(nums[i], i);
         }
@@ -36,21 +37,21 @@ class TwoSum {
     }
 
     @Test
-    void testTwoSumOne() {
+    void givenInput1_whenCheckTheTwoSum_thenItShouldReturn0And1() {
         final int[] nums = new int[]{2, 7, 11, 15};
         final int target = 9;
         Assertions.assertArrayEquals(new int[]{0, 1}, twoSum(nums, target));
     }
 
     @Test
-    void testTwoSumTwo() {
+    void givenInput2_whenCheckTheTwoSum_thenItShouldReturn1And2() {
         final int[] nums = new int[]{3, 2, 4};
         final int target = 6;
         Assertions.assertArrayEquals(new int[]{1, 2}, twoSum(nums, target));
     }
 
     @Test
-    void testTwoSumThree() {
+    void givenInput3_whenCheckTheTwoSum_thenItShouldReturn0And1() {
         final int[] nums = new int[]{3, 3};
         final int target = 6;
         Assertions.assertArrayEquals(new int[]{0, 1}, twoSum(nums, target));
@@ -58,7 +59,7 @@ class TwoSum {
 }
 ```
 
-## Best Time to Buy and Sell Stock
+## 121. Best Time to Buy and Sell Stock
 
 1. brute force
 2. one loop: if current price is lower than the previous one, we reset the buy point to the current one, because it's impossible to be the sell point for previous time series data.
@@ -102,14 +103,14 @@ class JumpGame {
     }
 
     @Test
-    void testJumpGameOne() {
+    void giveInput1_whenCheckTheResult_thenItShouldBeTrue() {
         final int[] nums = new int[]{2, 3, 1, 1, 4};
         final boolean output = true;
         Assertions.assertEquals(output, canJump(nums));
     }
 
     @Test
-    void testJumpGameTwo() {
+    void giveInput2_whenCheckTheResult_thenItShouldBeFalse() {
         final int[] nums = new int[]{3, 2, 1, 0, 4};
         final boolean output = false;
         Assertions.assertEquals(output, canJump(nums));
@@ -174,7 +175,7 @@ class ClimbStairs {
     }
 
     @Test
-    void testTwoSumOne() {
+    void given2Stairs_whenCheckMethods_thenItShouldBe2() {
         final int n = 2;
         final int output = 2;
         Assertions.assertEquals(output, climbStairs(n));
@@ -183,7 +184,7 @@ class ClimbStairs {
     }
 
     @Test
-    void testTwoSumTwo() {
+    void given3Stairs_whenCheckMethods_thenItShouldBe3() {
         final int n = 3;
         final int output = 3;
         Assertions.assertEquals(output, climbStairs(n));
@@ -192,7 +193,7 @@ class ClimbStairs {
     }
 
     @Test
-    void testTwoSumThree() {
+    void given10Stairs_whenCheckMethodsUsingDifferentAlgo_thenTheResultShouldMatch() {
         final int n = 10;
         Assertions.assertEquals(climbStairs(n), climbStairsDp(n));
     }
@@ -207,16 +208,14 @@ class ClimbStairs {
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-/**
- * <a href="https://leetcode.com/problems/maximum-profit-in-job-scheduling/">Maximum Profit in Job Scheduling</a> 
- */
 class JobScheduling {
+    // https://leetcode.com/problems/maximum-profit-in-job-scheduling/
     public int jobScheduling(final int[] startTime, final int[] endTime, final int[] profit) {
         return 0;
     }
 
     @Test
-    void testJobSchedulingOne() {
+    void givenInputs1_whenRunTheJobScheduling_thenTheMaximumProfitShouldBe120() {
         final int[] startTime = new int[]{1, 2, 3, 3};
         final int[] endTime = new int[]{3, 4, 5, 6};
         final int[] profit = new int[]{50, 10, 40, 70};
@@ -224,7 +223,7 @@ class JobScheduling {
     }
 
     @Test
-    void testJobSchedulingTwo() {
+    void givenInputs2_whenRunTheJobScheduling_thenTheMaximumProfitShouldBe150() {
         final int[] startTime = new int[]{1, 2, 3, 4, 6};
         final int[] endTime = new int[]{3, 5, 10, 6, 9};
         final int[] profit = new int[]{20, 20, 100, 70, 60};
@@ -232,7 +231,7 @@ class JobScheduling {
     }
 
     @Test
-    void testJobSchedulingThree() {
+    void givenInputs3_whenRunTheJobScheduling_thenTheMaximumProfitShouldBe6() {
         final int[] startTime = new int[]{1, 1, 1};
         final int[] endTime = new int[]{2, 3, 4};
         final int[] profit = new int[]{5, 6, 4};
