--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -61,11 +61,40 @@ class TwoSum {
 
 ## 121. Best Time to Buy and Sell Stock
 
-1. brute force
-2. one loop: if current price is lower than the previous one, we reset the buy point to the current one, because it's impossible to be the sell point for previous time series data.
-
 ```java
+import org.junit.jupiter.api.Test;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
+
+class MaxProfit {
+    public int maxProfit(final int[] prices) {
+        int maxProfit = 0;
+        int min = Integer.MAX_VALUE;
+        for (int i = 0; i < prices.length; i++) {
+            if (prices[i] < min) {
+                min = prices[i];
+            }
+            if (prices[i] - min > maxProfit) {
+                maxProfit = prices[i] - min;
+            }
+        }
+        return maxProfit;
+    }
+
+    @Test
+    void givenInput1_whenCalculateTheMaxProfit_thenItShouldReturn5() {
+        final int[] prices = new int[]{7, 1, 5, 3, 6, 4};
+        assertEquals(5, maxProfit(prices));
+    }
+
+    @Test
+    void givenInput2_whenCalculateTheMaxProfit_thenItShouldReturn0() {
+        final int[] prices = new int[]{7, 6, 4, 3, 1};
+        assertEquals(0, maxProfit(prices));
+    }
+
+}
 ```
 
 ## Valid Parentheses
