--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -3,14 +3,7 @@ Grind 75
 
 [Grind 75 questions](https://www.techinterviewhandbook.org/grind75)
 
-## 1. Two Sum
-
-[1. Two Sum](https://leetcode.com/problems/two-sum/)
-
-1. brute force
-2. using hashmap to cache the index of `complement`
-   1. two loop
-   2. one loop
+## [1. Two Sum](https://leetcode.com/problems/two-sum/)
 
 ```java
 import org.junit.jupiter.api.Assertions;
@@ -59,7 +52,7 @@ class TwoSum {
 }
 ```
 
-## 121. Best Time to Buy and Sell Stock
+## [121. Best Time to Buy and Sell Stock](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/description/)
 
 ```java
 import org.junit.jupiter.api.Test;
@@ -97,17 +90,71 @@ class MaxProfit {
 }
 ```
 
-## Valid Parentheses
-
-1. use the stack data structure
+## [20. Valid Parentheses](https://leetcode.com/problems/valid-parentheses/)
 
 ```java
+import org.junit.jupiter.api.Test;
 
+import java.util.Stack;
+
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+class ValidParentheses {
+    public boolean isValid(final String s) {
+        final Stack<Character> stack = new Stack<>();
+        for (final char c : s.toCharArray()) {
+            if (c == '(' || c == '{' || c == '[') {
+                stack.push(c);
+            } else if (stack.isEmpty()) {
+                return false;
+            } else if (c == ')') {
+                if (stack.pop() != '(') {
+                    return false;
+                }
+            } else if (c == '}') {
+                if (stack.pop() != '{') {
+                    return false;
+                }
+            } else if (c == ']') {
+                if (stack.pop() != '[') {
+                    return false;
+                }
+            } else {
+                return false;
+            }
+        }
+        return stack.isEmpty();
+    }
+
+    @Test
+    void givenInput1_whenCheckIfValid_thenReturnTrue() {
+        final String input = "()";
+        assertTrue(isValid(input));
+    }
+
+    @Test
+    void givenInput2_whenCheckIfValid_thenReturnTrue() {
+        final String input = "()[]{}";
+        assertTrue(isValid(input));
+    }
+
+    @Test
+    void givenInput3_whenCheckIfValid_thenReturnFalse() {
+        final String input = "(]";
+        assertFalse(isValid(input));
+    }
+
+    @Test
+    void givenInput4_whenCheckIfValid_thenReturnFalse() {
+        final String input = "]";
+        assertFalse(isValid(input));
+    }
+
+}
 ```
 
-## 55. Jump Game
-
-[55. Jump Game](https://leetcode.com/problems/jump-game/)
+## [55. Jump Game](https://leetcode.com/problems/jump-game/)
 
 ```java
 import org.junit.jupiter.api.Assertions;
@@ -147,9 +194,7 @@ class JumpGame {
 }
 ```
 
-## 70. Climbing Stairs
-
-[70. Climbing Stairs](https://leetcode.com/problems/climbing-stairs/)
+## [70. Climbing Stairs](https://leetcode.com/problems/climbing-stairs/)
 
 ```java
 import org.junit.jupiter.api.Assertions;
@@ -229,9 +274,7 @@ class ClimbStairs {
 }
 ```
 
-## 1235. Maximum Profit in Job Scheduling
-
-[1235. Maximum Profit in Job Scheduling](https://leetcode.com/problems/maximum-profit-in-job-scheduling/)
+## [1235. Maximum Profit in Job Scheduling](https://leetcode.com/problems/maximum-profit-in-job-scheduling/)
 
 ```java
 import org.junit.jupiter.api.Assertions;
