--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -312,4 +312,9 @@ class JobScheduling {
 }
 ```
 
+## [maximum gold](https://blog.csdn.net/qq_35655602/article/details/107826580)
+
+```java
+```
+
 
