--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -315,6 +315,58 @@ class JobScheduling {
 ## [maximum gold](https://blog.csdn.net/qq_35655602/article/details/107826580)
 
 ```java
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+
+class MaximumGold {
+    public int getMaximumGold(final int w, final int n, final int[] p, final int[] g) {
+        final int[][] result = new int[n + 1][w + 1];
+        for (int i = 1; i <= n; i++) { // num of mines
+            for (int j = 1; j <= w; j++) { // num of workers
+                if (j < p[i - 1]) {
+                    result[i][j] = result[i][j];
+                } else {
+                    result[i][j] = Math.max(result[i - 1][j], result[i - 1][j - p[i - 1]] + g[i - 1]);
+                }
+            }
+        }
+
+        return result[n][w];
+    }
+
+    public int getMaximumGoldV2(final int w, final int n, final int[] p, final int[] g) {
+        final int[] result = new int[w + 1];
+        for (int i = 1; i <= n; i++) { // num of mines
+            for (int j = w; j >= 1; j--) { // num of workers, note here we should calculate from right to left
+                if (j >= p[i - 1]) {
+                    result[j] = Math.max(result[j], result[j - p[i - 1]] + g[i - 1]);
+                }
+            }
+        }
+        return result[w];
+    }
+
+
+    @Test
+    void testMaximumGoldOne() {
+        final int w = 10;
+        final int n = 5;
+        final int[] p = new int[]{5, 5, 3, 4, 3};
+        final int[] g = new int[]{400, 500, 200, 300, 350};
+        final int output = 900;
+        Assertions.assertEquals(output, getMaximumGold(w, n, p, g));
+    }
+
+    @Test
+    void testMaximumGoldTwo() {
+        final int w = 10;
+        final int n = 5;
+        final int[] p = new int[]{5, 5, 3, 4, 3};
+        final int[] g = new int[]{400, 500, 200, 300, 350};
+        final int output = 900;
+        Assertions.assertEquals(output, getMaximumGoldV2(w, n, p, g));
+    }
+}
 ```
 
 
