--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -280,10 +280,62 @@ class ClimbStairs {
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Comparator;
+import java.util.List;
+import java.util.TreeMap;
+
+import static java.lang.Math.max;
+import static java.util.Collections.binarySearch;
+
 class JobScheduling {
-    // https://leetcode.com/problems/maximum-profit-in-job-scheduling/
+    // https://leetcode.com/problems/maximum-profit-in-job-scheduling/solutions/409009/java-c-python-dp-solution/
     public int jobScheduling(final int[] startTime, final int[] endTime, final int[] profit) {
-        return 0;
+        final int n = profit.length;
+        final int[][] jobs = new int[n][3];
+        for (int i = 0; i < n; i++) {
+            jobs[i] = new int[]{startTime[i], endTime[i], profit[i]};
+        }
+        Arrays.sort(jobs, Comparator.comparingInt(e -> e[1]));
+        // key is the end time, value is the maximum profit for the end time
+        final TreeMap<Integer, Integer> dp = new TreeMap<>();
+        dp.put(0, 0);
+        for (final int[] job : jobs) {
+            final int cur = dp.floorEntry(job[0]).getValue() + job[2];
+            if (cur > dp.lastEntry().getValue()) {
+                dp.put(job[1], cur);
+            }
+        }
+        return dp.lastEntry().getValue();
+    }
+
+    // https://www.youtube.com/watch?v=0C7re8lam7M
+    public int jobScheduling2(final int[] startTime, final int[] endTime, final int[] profit) {
+        final int n = profit.length;
+        final int[][] jobs = new int[n][3];
+        for (int i = 0; i < n; i++) {
+            jobs[i] = new int[]{startTime[i], endTime[i], profit[i]};
+        }
+        Arrays.sort(jobs, Comparator.comparingInt(e -> e[1]));
+
+        final List<int[]> dp = new ArrayList<>(); // {endTime, profit}
+        int ret = 0;
+        dp.add(new int[]{0, 0});
+        for (final int[] job : jobs) {
+            int cur = ret;
+            // here job[0] + 1 is to mimic the upper_bound in cpp
+            int ip = binarySearch(dp, new int[]{job[0] + 1, Integer.MAX_VALUE}, Comparator.comparingInt(e -> e[0]));
+            if (ip < 0) {
+                ip = ~ip - 1;
+            } else {
+                ip--;
+            }
+            cur = max(cur, dp.get(ip)[1] + job[2]);
+            dp.add(new int[]{job[1], cur});
+            ret = max(ret, cur);
+        }
+        return ret;
     }
 
     @Test
@@ -292,6 +344,7 @@ class JobScheduling {
         final int[] endTime = new int[]{3, 4, 5, 6};
         final int[] profit = new int[]{50, 10, 40, 70};
         Assertions.assertEquals(120, jobScheduling(startTime, endTime, profit));
+        Assertions.assertEquals(120, jobScheduling2(startTime, endTime, profit));
     }
 
     @Test
@@ -300,6 +353,7 @@ class JobScheduling {
         final int[] endTime = new int[]{3, 5, 10, 6, 9};
         final int[] profit = new int[]{20, 20, 100, 70, 60};
         Assertions.assertEquals(150, jobScheduling(startTime, endTime, profit));
+        Assertions.assertEquals(150, jobScheduling2(startTime, endTime, profit));
     }
 
     @Test
@@ -308,6 +362,16 @@ class JobScheduling {
         final int[] endTime = new int[]{2, 3, 4};
         final int[] profit = new int[]{5, 6, 4};
         Assertions.assertEquals(6, jobScheduling(startTime, endTime, profit));
+        Assertions.assertEquals(6, jobScheduling2(startTime, endTime, profit));
+    }
+
+    @Test
+    void givenInputs4_whenRunTheJobScheduling_thenTheMaximumProfitShouldBe6() {
+        final int[] startTime = new int[]{4, 3, 1, 2, 4, 8, 3, 3, 3, 9};
+        final int[] endTime = new int[]{5, 6, 3, 5, 9, 9, 8, 5, 7, 10};
+        final int[] profit = new int[]{9, 9, 5, 12, 10, 11, 10, 4, 14, 7};
+        Assertions.assertEquals(37, jobScheduling(startTime, endTime, profit));
+        Assertions.assertEquals(37, jobScheduling2(startTime, endTime, profit));
     }
 }
 ```
