--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -287,7 +287,6 @@ import java.util.List;
 import java.util.TreeMap;
 
 import static java.lang.Math.max;
-import static java.util.Collections.binarySearch;
 
 class JobScheduling {
     // https://leetcode.com/problems/maximum-profit-in-job-scheduling/solutions/409009/java-c-python-dp-solution/
@@ -324,18 +323,24 @@ class JobScheduling {
         dp.add(new int[]{0, 0});
         for (final int[] job : jobs) {
             int cur = ret;
-            // here job[0] + 1 is to mimic the upper_bound in cpp
-            int ip = binarySearch(dp, new int[]{job[0] + 1, Integer.MAX_VALUE}, Comparator.comparingInt(e -> e[0]));
-            if (ip < 0) {
-                ip = ~ip - 1;
-            } else {
-                ip--;
-            }
+            //  mimic the upper_bound in cpp
+            int ip = upperBound(dp, new int[]{job[0], Integer.MAX_VALUE});
+            ip--;
             cur = max(cur, dp.get(ip)[1] + job[2]);
             dp.add(new int[]{job[1], cur});
             ret = max(ret, cur);
         }
         return ret;
+    }
+
+    // note it will exceed the time limit in leetcode
+    private int upperBound(final List<int[]> dp, final int[] target) {
+        for (int i = 0; i < dp.size(); i++) {
+            if (dp.get(i)[0] > target[0]) {
+                return i;
+            }
+        }
+        return dp.size();
     }
 
     @Test
@@ -372,6 +377,15 @@ class JobScheduling {
         final int[] profit = new int[]{9, 9, 5, 12, 10, 11, 10, 4, 14, 7};
         Assertions.assertEquals(37, jobScheduling(startTime, endTime, profit));
         Assertions.assertEquals(37, jobScheduling2(startTime, endTime, profit));
+    }
+
+    @Test
+    void givenInputs5_whenRunTheJobScheduling_thenTheMaximumProfitShouldBe6() {
+        final int[] startTime = new int[]{3, 5, 3, 7, 4};
+        final int[] endTime = new int[]{10, 8, 8, 10, 9};
+        final int[] profit = new int[]{10, 8, 10, 9, 9};
+        Assertions.assertEquals(10, jobScheduling(startTime, endTime, profit));
+        Assertions.assertEquals(10, jobScheduling2(startTime, endTime, profit));
     }
 }
 ```
