--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -450,7 +450,31 @@ class MaximumGold {
 ## [207. Course Schedule](https://leetcode.com/problems/course-schedule/)
 
 ```java
+import org.junit.jupiter.api.Test;
 
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+
+class CourseSchedule {
+    public boolean canFinish(int numCourses, int[][] prerequisites) {
+        return false;
+    }
+
+    @Test
+    void givenInput1_whenCallCanFinish_thenItShouldReturnTrue() {
+        final int numCourses = 2;
+        final int[][] prerequisites = new int[][]{{1, 0}};
+        assertTrue(canFinish(numCourses, prerequisites));
+    }
+
+    @Test
+    void givenInput2_whenCallCanFinish_thenItShouldReturnFalse() {
+        final int numCourses = 2;
+        final int[][] prerequisites = new int[][]{{1, 0}, {0, 1}};
+        assertFalse(canFinish(numCourses, prerequisites));
+    }
+}
 ```
 
 
