--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -479,7 +479,7 @@ class CourseSchedule {
 
 ## [704. Binary Search](https://leetcode.com/problems/binary-search/)
 
-[LeetCode 207 & 210: Course Schedule I & II | Topological Sort | Kahn's algorithm](https://www.youtube.com/watch?v=IWLpZbu1wco)
+[LeetCode 207 & 210: Course Schedule I & II | Topological Sort | Kahn's algorithm](https://www.youtube.com/watch?v=2l22FRtU45M&t=125s)
 
 ```java
 ```
