--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -449,6 +449,8 @@ class MaximumGold {
 
 ## [207. Course Schedule](https://leetcode.com/problems/course-schedule/)
 
+[LeetCode 207 & 210: Course Schedule I & II | Topological Sort | Kahn's algorithm](https://www.youtube.com/watch?v=2l22FRtU45M&t=125s)
+
 ```java
 import org.junit.jupiter.api.Test;
 
@@ -458,7 +460,38 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class CourseSchedule {
     public boolean canFinish(int numCourses, int[][] prerequisites) {
-        return false;
+        final int[] courseDeps = new int[numCourses];
+        for (final int[] pre : prerequisites) {
+            courseDeps[pre[0]]++;
+        }
+        final Set<Integer> zeroDeps = new HashSet<>();
+        for (int i = 0; i < numCourses; i++) {
+            if (courseDeps[i] == 0) {
+                zeroDeps.add(i);
+            }
+        }
+        if (zeroDeps.isEmpty()) {
+            return false;
+        }
+        while(!zeroDeps.isEmpty()) {
+            final Iterator<Integer> it = zeroDeps.iterator();
+            final int course = it.next();
+            zeroDeps.remove(course);
+            for (final int[] pre : prerequisites) {
+                if (pre[1] == course) {
+                    courseDeps[pre[0]]--;
+                    if (courseDeps[pre[0]] == 0) {
+                        zeroDeps.add(pre[0]);
+                    }
+                }
+            }
+        }
+        for (final int i : courseDeps) {
+            if (i > 0) {
+                return false;
+            }
+        }
+        return true;
     }
 
     @Test
@@ -478,8 +511,6 @@ class CourseSchedule {
 ```
 
 ## [704. Binary Search](https://leetcode.com/problems/binary-search/)
-
-[LeetCode 207 & 210: Course Schedule I & II | Topological Sort | Kahn's algorithm](https://www.youtube.com/watch?v=2l22FRtU45M&t=125s)
 
 ```java
 ```
