--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -532,4 +532,30 @@ class Solution {
 }
 ```
 
+## [57. Insert Interval](https://leetcode.com/problems/insert-interval/)
+
+[Insert Interval - Leetcode 57 - Python](https://www.youtube.com/watch?v=A8NUOmlwOlM)
+
+```java
+class Solution {
+    public int[][] insert(int[][] intervals, int[] newInterval) {
+        List<int[]> results = new ArrayList<>();
+        for (int i = 0; i < intervals.length; i++) {
+            int[] tmp = intervals[i];
+            if (intervals[i][1] < newInterval[0]) {
+                results.add(tmp);
+            } else if (intervals[i][0] > newInterval[1]) {
+                results.add(newInterval);
+                newInterval = tmp;
+            } else {
+                newInterval[0] = Math.min(tmp[0], newInterval[0]);
+                newInterval[1] = Math.max(tmp[1], newInterval[1]);
+            }
+        }
+        results.add(newInterval);
+        return results.toArray(new int[results.size()][]);
+    }
+}
+```
+
 
