--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -390,7 +390,7 @@ class JobScheduling {
 }
 ```
 
-## [maximum gold](https://blog.csdn.net/qq_35655602/article/details/107826580)
+## [Maximum Gold](https://blog.csdn.net/qq_35655602/article/details/107826580)
 
 ```java
 import org.junit.jupiter.api.Assertions;
