--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -560,5 +560,30 @@ class Solution {
 ## [56. Merge Intervals](https://leetcode.com/problems/merge-intervals/)
 
 ```java
+class Solution {
+    public int[][] merge(int[][] intervals) {
+        Arrays.sort(intervals, (a, b) -> {
+            if (a[0] == b[0]) {
+                return 0;
+            }
+            return a[0] > b[0] ? 1 : -1;
+        });
+        int[] tmp = intervals[0];
+        List<int[]> result = new ArrayList<>();
+        for (int i = 1; i < intervals.length; i++) {
+            int[] cur = intervals[i];
+            if (cur[0] > tmp[1]) {
+                result.add(tmp);
+                tmp = cur;
+            } else if (cur[1] < tmp[0]) {
+                result.add(cur);
+            } else {
+                tmp = new int[] {Math.min(tmp[0], cur[0]), Math.max(tmp[1], cur[1])};
+            }
+        }
+        result.add(tmp);
+        return result.toArray(new int[result.size()][]);
+    }
+}
 ```
 
