--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -587,3 +587,7 @@ class Solution {
 }
 ```
 
+## [238. Product of Array Except Self](https://leetcode.com/problems/product-of-array-except-self/)
+
+```java
+```
