--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -590,4 +590,47 @@ class Solution {
 ## [238. Product of Array Except Self](https://leetcode.com/problems/product-of-array-except-self/)
 
 ```java
+class Solution {
+    public int[] productExceptSelf(int[] nums) {
+        return solution2(nums);
+    }
+
+    // Time Complexity: O(N)
+    // Space Complexity: O(N)
+    public int[] solution1(int[] nums) {
+        int length = nums.length;
+        int[] before = new int[length];
+        before[0] = 1;
+        for (int i = 1; i < length; i++) {
+            before[i] = before[i-1] * nums[i-1];
+        }
+        int[] after = new int[length];
+        after[length - 1] = 1;
+        for (int i = length-2; i >= 0; i--) {
+            after[i] = after[i+1] * nums[i+1];
+        }
+        int[] result = new int[length];
+        for (int i = 0; i < length; i++) {
+            result[i] = before[i] * after[i];
+        }
+        return result;
+    }
+
+    // Time Complexity: O(N)
+    // Space Complexity: O(1)
+    public int[] solution2(int[] nums) {
+        int length = nums.length;
+        int[] result = new int[length];
+        result[0] = 1;
+        for (int i = 1; i < length; i++) {
+            result[i] = result[i-1] * nums[i-1];
+        }
+        int after = 1;
+        for (int i = length - 1; i>=0; i--) {
+            result[i] = result[i] * after;
+            after = nums[i] * after;
+        }
+        return result;
+    }
+}
 ```
