--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -638,4 +638,33 @@ class Solution {
 ## [15. 3Sum](https://leetcode.com/problems/3sum/)
 
 ```java
+class Solution {
+    public List<List<Integer>> threeSum(int[] nums) {
+        Set<List<Integer>> result = new HashSet<>();
+        Arrays.sort(nums);
+        for (int i = 0; i < nums.length; i++) {
+            if (nums[i] > 0) {
+                return new ArrayList<>(result);
+            }
+            int head = i+1;
+            int tail = nums.length - 1;
+            while (head < tail) {
+                int sum = nums[i] + nums[head] + nums[tail];
+                if (sum == 0) {
+                    List<Integer> tmp = new ArrayList<>();
+                    tmp.add(nums[i]);
+                    tmp.add(nums[head]);
+                    tmp.add(nums[tail]);
+                    result.add(tmp);
+                    head++;
+                } else if (sum > 0) {
+                    tail--;
+                } else {
+                    head++;
+                }
+            }
+        }
+        return new ArrayList<>(result);
+    }
+}
 ```
