--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -638,4 +638,34 @@ class Solution {
 ## [15. 3Sum](https://leetcode.com/problems/3sum/)
 
 ```java
+class Solution {
+    // Dutch National Flag algorithm
+    public void sortColors(int[] nums) {
+        int head = 0;
+        int mid = 0;
+        int tail = nums.length - 1;
+        while (mid <= tail) {
+            if (nums[mid] == 0 && nums[head] != 0) {
+                int tmp = nums[head];
+                nums[head++] = nums[mid];
+                nums[mid++] = tmp;
+            } else if (nums[mid] == 0 && nums[head] == 0) {
+                mid++;
+                head++;
+            } else if (nums[mid] == 1) {
+                mid++;
+            } else {
+                int tmp = nums[tail];
+                nums[tail] = nums[mid];
+                nums[mid] = tmp;
+                tail--;
+            }
+        }
+    }
+}
+```
+
+## [236. Lowest Common Ancestor of a Binary Tree](https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-tree/)
+
+```java
 ```
