--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -702,4 +702,25 @@ class Solution {
 ## [236. Lowest Common Ancestor of a Binary Tree](https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-tree/)
 
 ```java
+class Solution {
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        if (root == null) {
+            return null;
+        }
+        if (root == p || root == q) {
+            return root;
+        }
+
+        TreeNode l = lowestCommonAncestor(root.left, p, q);
+        TreeNode r = lowestCommonAncestor(root.right, p, q);
+
+        if (l != null && r != null) {
+            return root;
+        } else if (l != null) {
+            return l;
+        } else {
+            return r;
+        }
+    }
+}
 ```
