--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -787,4 +787,29 @@ class Solution {
 ## [199. Binary Tree Right Side View](https://leetcode.com/problems/binary-tree-right-side-view/)
 
 ```java
+class Solution {
+    public List<Integer> rightSideView(TreeNode root) {
+        List<Integer> result = new ArrayList<>();
+        Map<Integer, Boolean> marked = new HashMap<>();
+        rightSideRecursive(result, root, marked, 0);
+        return result;
+    }
+
+    public void rightSideRecursive(List<Integer> result, TreeNode cur, Map<Integer, Boolean> marked, int level) {
+        if (cur == null) {
+            return;
+        }
+        if (!marked.getOrDefault(level, false)) {
+            marked.put(level, true);
+            result.add(cur.val);
+        }
+        rightSideRecursive(result, cur.right, marked, level+1);
+        rightSideRecursive(result, cur.left, marked, level+1);
+    }
+}
+```
+
+## [133. Clone Graph](https://leetcode.com/problems/clone-graph/)
+
+```java
 ```
