--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -813,3 +813,8 @@ class Solution {
 
 ```java
 ```
+
+## [230. Kth Smallest Element in a BST](https://leetcode.com/problems/kth-smallest-element-in-a-bst/)
+
+```java
+```
