--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -817,4 +817,24 @@ class Solution {
 ## [230. Kth Smallest Element in a BST](https://leetcode.com/problems/kth-smallest-element-in-a-bst/)
 
 ```java
+public class KthSmallest {
+    int result = -1;
+    public int kthSmallest(TreeNode root, int k) {
+        int count = 0;
+        inorder(root, k, count);
+        return result;
+    }
+
+    private void inorder(TreeNode cur, int k, int count) {
+        if (cur == null)
+            return;
+        inorder(cur.left, k, count);
+        count++;
+        if (count == k) {
+            this.result = cur.val;
+            return;
+        }
+        inorder(cur.right, k, count);
+    }
+}
 ```
