--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -812,29 +812,86 @@ class Solution {
 ## [133. Clone Graph](https://leetcode.com/problems/clone-graph/)
 
 ```java
+/*
+// Definition for a Node.
+class Node {
+    public int val;
+    public List<Node> neighbors;
+    public Node() {
+        val = 0;
+        neighbors = new ArrayList<Node>();
+    }
+    public Node(int _val) {
+        val = _val;
+        neighbors = new ArrayList<Node>();
+    }
+    public Node(int _val, ArrayList<Node> _neighbors) {
+        val = _val;
+        neighbors = _neighbors;
+    }
+}
+*/
+
+class Solution {
+    public Node cloneGraph(Node node) {
+        if (node == null) 
+            return null;
+        if (node.neighbors.size() == 0) 
+            return new Node(node.val);
+        return dfs(node, new HashMap<>());
+    }
+
+    private Node dfs(Node cur, Map<Node, Node> map) {
+        Node clone = new Node(cur.val);
+        map.put(cur, clone);
+        for (Node n : cur.neighbors) {
+            if (map.get(n) != null) {
+                clone.neighbors.add(map.get(n));
+            } else {
+                clone.neighbors.add(dfs(n, map));
+            }
+        }
+        return clone;
+    }
+}
 ```
 
 ## [230. Kth Smallest Element in a BST](https://leetcode.com/problems/kth-smallest-element-in-a-bst/)
 
 ```java
-public class KthSmallest {
-    int result = -1;
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode() {}
+ *     TreeNode(int val) { this.val = val; }
+ *     TreeNode(int val, TreeNode left, TreeNode right) {
+ *         this.val = val;
+ *         this.left = left;
+ *         this.right = right;
+ *     }
+ * }
+ */
+class Solution {
+    int K;
     public int kthSmallest(TreeNode root, int k) {
-        int count = 0;
-        inorder(root, k, count);
-        return result;
+        K = k;
+        return inorder(root);
     }
 
-    private void inorder(TreeNode cur, int k, int count) {
+    private Integer inorder(TreeNode cur) {
         if (cur == null)
-            return;
-        inorder(cur.left, k, count);
-        count++;
-        if (count == k) {
-            this.result = cur.val;
-            return;
+            return null;
+        Integer left = inorder(cur.left);
+        if (left == null) {
+            if (--K == 0)
+                return cur.val;
+            else
+                return inorder(cur.right);
         }
-        inorder(cur.right, k, count);
+        return left;
     }
 }
 ```
