--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -895,3 +895,8 @@ class Solution {
     }
 }
 ```
+
+## [3. Longest Substring Without Repeating Characters](https://leetcode.com/problems/longest-substring-without-repeating-characters/)
+
+```java
+```
