--- a/tech/230930-grind-75.md
+++ b/tech/230930-grind-75.md
@@ -900,3 +900,7 @@ class Solution {
 
 ```java
 ```
+
+## [150. Evaluate Reverse Polish Notation](https://leetcode.com/problems/evaluate-reverse-polish-notation/)
+```java
+```
